Add global js variable

--- a/jchart/templates/charting/js.html
+++ b/jchart/templates/charting/js.html
@@ -1,7 +1,10 @@
 <script type="text/javascript">
+	
+	// iBio: adding a global variable so we can hook up JS functions
+	// for things like changing x axis via radio buttons
+	
 window.addEventListener("DOMContentLoaded", function() {
     var ctx = document.getElementById("{{ html_id }}").getContext("2d");
-
-    new Chart(ctx, {{ chart_configuration|safe }});
+    window.{{js_id}} = new Chart(ctx, {{ chart_configuration|safe }});
 });
 </script>
