--- a/jchart/templates/charting/html.html
+++ b/jchart/templates/charting/html.html
@@ -1,3 +1,7 @@
-<div class="chart-container" style="position: relative; {% if chart.height %}height: {{ chart.height }}px;{% endif %} {% if chart.width %}width: {{ chart.width }}px{% endif %}">
+<div
+  id="{{ html_id }}-container"
+  class="chart-container"
+  style="position: relative; {% if chart.height %}height: {{ chart.height }}px;{% endif %} {% if chart.width %}width: {{ chart.width }}px{% endif %}"
+>
   <canvas class="chart" id="{{ html_id }}"></canvas>
 </div>
